Changed divs to more semantic elements
Header, section, article

--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
             <a href="#" class="bar-item bar-button">Link 2</a>
             <a href="#" class="bar-item bar-button">Link 3</a>
         </div>
-        <div id="main" class="main">
+        <section id="main" class="main">
 
-            <div class="teal header">
+            <header class="teal header">
                 <button id="openNav" class="teal" onclick="nav_open()">&#9776;</button>
                 <h1 class="page_header">Sample Page</h1>
-            </div>
+            </header>
 
-            <div id="section1" class="section">
+            <article id="section1" class="section">
                 <h2>Section 1</h2>
                 <p>Section 1 is about section 1 topics.</p>
-            </div>
-            <div id="section2" class="section">
+            </article>
+            <article id="section2" class="section">
                 <h2>Section 2</h2>
                 <p>Section 2 is about section 2 topics.</p>
-            </div>
-            <div id="section3" class="section">
+            </article>
+            <article id="section3" class="section">
                 <h2>Section 3</h2>
                 <p>Section 3 is about section 3 topics.</p>
-            </div>
-            <div id="section4" class="section">
+            </article>
+            <article id="section4" class="section">
                 <h2>Section 4</h2>
                 <p>Section 4 is about section 4 topics.</p>
-            </div>
+            </article>
             
-        </div>
+        </section>
                 
         <script>
             function nav_open() {
